fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
     color: #222;
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5,h6 {
